Revision history for App-Genpass

0.04    01.01.09
        - replaced die with Carp's croak

0.03    14.12.09
        - fixed small bug in password repetition
        - adding test that statistically catches it

0.02    11.12.09
        - removing special chars, refactored nicely
        - added verification process
        - more tests
        - rewrote some tests
        - fixed bug that appeared in original genpass, where unreadable chars
          would be inserted into the chars array twice
        - removed BUILD
        - adding test for number of types wanted with a die

0.01    10.12.09
        First version, released on an unsuspecting world.
