@@ -1,3 +1,1 @@
-test for the wantarray options
 documentation documentation documentation
-replace die with croak
